@@ -1,4 +1,5 @@
 Version 4.0.21 (2014-03-xx)
+	Added title input field to link dialog for a11y reasons can be disabled by using the link_title option.
 	Fixed bug where iOS 7.1 Safari would open linked when images where inserted into links.
 	Fixed issue where the UndoManager transact method couldn't be nested since it only had one lock.
 Version 4.0.20 (2014-03-18)
